tests/unit-fail/j038a.c
int foo();

int main(void) {
      foo();
      return 0;
}

int foo(int a, int b) {
      return 0;
}
